--- a/react-native/package.json
+++ b/react-native/package.json
@@ -90,6 +90,7 @@
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-builder-bob": "^0.32.0",
+    "react-native-tts": "^4.1.1",
     "release-it": "^17.10.0",
     "turbo": "^1.10.7",
     "typescript": "^5.2.2"
@@ -99,7 +100,8 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "react-native-tts": ">=4.1.1"
   },
   "workspaces": [
     "example"
